--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
             <div class="form-group">
               <label>Chọn file đề thi (Word)</label>
               <input type="file" id="examFile" accept=".doc,.docx" required>
-              <small>Định dạng: Mỗi câu bắt đầu bằng "Câu X:", các đáp án A. B. C. D.</small>
+              <small>Mỗi câu bắt đầu bằng "Câu X:", đáp án A. B. C. D.</small>
             </div>
             <div class="form-row">
               <div class="form-group">
@@ -64,22 +64,22 @@
               </div>
             </div>
             <div class="form-group">
-              <label><input type="checkbox" id="shuffleQuestions" checked> Trộn câu hỏi</label>
+              <label><input type="checkbox" id="shuffleQuestions" checked> Trộn câu hỏi (chỉ phần trắc nghiệm)</label>
             </div>
-            <button type="submit" class="btn btn-primary" id="uploadBtn">📤 Upload và Tạo Đề</button>
+            <button type="submit" class="btn btn-primary" id="uploadBtn">📤 Upload Đề</button>
           </form>
           <div id="uploadMessage" class="message"></div>
         </div>
 
         <div class="card">
-          <h3>📚 Danh Sách Đề Đã Upload</h3>
+          <h3>📚 Danh Sách Đề</h3>
           <div id="examsList" class="exams-list">
             <p class="empty-state">Đang tải...</p>
           </div>
         </div>
 
         <div class="card">
-          <h3>📊 Danh Sách Bài Nộp</h3>
+          <h3>📊 Bài Nộp Gần Đây</h3>
           <div id="submissionsList" class="submissions-list">
             <p class="empty-state">Đang tải...</p>
           </div>
@@ -124,7 +124,7 @@
     <div id="examPage" class="page">
       <div class="exam-header">
         <div class="exam-info">
-          <h2 id="examTitle">📝 Bài Kiểm Tra</h2>
+          <h2>📝 Bài Kiểm Tra</h2>
           <p id="studentInfo"></p>
         </div>
         <div class="timer-container">
@@ -157,6 +157,7 @@
         <div id="examDetailContent"></div>
         <div class="modal-actions">
           <button class="btn btn-primary" id="saveAnswers">💾 Lưu Đáp Án</button>
+          <button class="btn btn-secondary" id="sendReport">📧 Gửi Báo Cáo</button>
           <button class="btn btn-danger" id="deleteExam">🗑️ Xóa Đề</button>
         </div>
       </div>
@@ -164,7 +165,7 @@
   </div>
 
   <footer class="footer">
-    <p>© GV. Nguyễn Minh Thiện – Được hỗ trợ bởi AI</p>
+    <p> GV. Nguyễn Minh Thiện – Vicecode with AI</p>
   </footer>
   <script src="main.js"></script>
 </body>
