--- a/public/index.html
+++ b/public/index.html
@@ -165,7 +165,7 @@
   </div>
 
   <footer class="footer">
-    <p> GV. Nguyễn Minh Thiện – Vicecode with AI</p>
+    <p> GV. Nguyễn Minh Thiện </p>
   </footer>
   <script src="main.js"></script>
 </body>
