--- a/public/admin/report.html
+++ b/public/admin/report.html
@@ -21,6 +21,8 @@
     <label>Lớp: <input id="classId" placeholder="VD: 10A1" /></label>
     <label>Khung giờ: <input id="schedule" placeholder="VD: 8:00–9:00" /></label>
     <label>Email nhận: <input id="to" placeholder="Mặc định dùng EMAIL_TO" /></label>
+    <label><input type="checkbox" id="attach" checked /> Đính kèm Excel</label>
+    <label><input type="checkbox" id="answers" /> Bao gồm đáp án</label>
 
     <button id="previewBtn">Xem trước</button>
     <button id="sendBtn">Gửi báo cáo</button>
