--- a/public/index.html
+++ b/public/index.html
@@ -1,212 +1,106 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
   <title>Hệ Thống Kiểm Tra Trực Tuyến</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
   <style>
-    /* SỬA MODAL - Thay dấu X bằng icon đẹp hơn */
-    .modal .close {
-      color: #ff4444;
-      font-size: 32px;
-      font-weight: normal;
-      line-height: 1;
-      opacity: 0.8;
-      transition: all 0.3s ease;
+    body {
+      font-family: system-ui, sans-serif;
+      background: #f9f9f9;
+      margin: 0;
+      padding: 0;
     }
-    .modal .close:hover,
-    .modal .close:focus {
-      color: #cc0000;
-      opacity: 1;
-      transform: rotate(90deg);
-      text-decoration: none;
+    .container {
+      max-width: 480px;
+      margin: 60px auto;
+      background: #fff;
+      padding: 32px;
+      border-radius: 12px;
+      box-shadow: 0 0 12px rgba(0,0,0,0.05);
+    }
+    h1 {
+      text-align: center;
+      margin-bottom: 24px;
+      color: #333;
+    }
+    label {
+      display: block;
+      margin: 12px 0 6px;
+      font-weight: 500;
+    }
+    input[type="password"] {
+      width: 100%;
+      padding: 10px;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+    button {
+      margin-top: 20px;
+      width: 100%;
+      padding: 12px;
+      font-size: 16px;
+      background: #007bff;
+      color: white;
+      border: none;
+      border-radius: 6px;
       cursor: pointer;
     }
-    /* Thay dấu × bằng icon SVG đẹp hơn */
-    .modal .close::before {
-      content: '✕';
-      font-size: 28px;
+    button:hover {
+      background: #0056b3;
     }
-    /* Màu nền modal đẹp hơn */
-    .modal-content {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: white;
-      border-radius: 15px;
-      box-shadow: 0 10px 40px rgba(0,0,0,0.3);
+    .note {
+      margin-top: 16px;
+      font-size: 14px;
+      color: #666;
     }
-    .modal-content h2 {
-      color: white;
-      border-bottom: 2px solid rgba(255,255,255,0.3);
-      padding-bottom: 15px;
-      margin-bottom: 20px;
-    }
-    /* Nút modal */
-    .modal-actions button {
-      margin: 5px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+    #main {
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <!-- LOGIN PAGE -->
-    <div id="loginPage" class="page active">
-      <div class="login-box">
-        <div class="logo">
-          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <path d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"/>
-          </svg>
-        </div>
-        <h1>Hệ Thống Kiểm Tra</h1>
-        <p class="subtitle">Nhập mật khẩu để tiếp tục</p>
-        <form id="loginForm">
-          <div class="input-group">
-            <input type="password" id="passwordInput" placeholder="Mật khẩu" autocomplete="off" required>
-            <button type="button" class="toggle-password" id="togglePassword">
-              <svg id="eyeIcon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
-                <circle cx="12" cy="12" r="3"/>
-              </svg>
-            </button>
-          </div>
-          <button type="submit" class="btn btn-primary" id="loginBtn">Đăng nhập</button>
-        </form>
-        <div id="loginError" class="error-message"></div>
-        <div class="info-text">
-          <p>💡 <strong>Giáo viên:</strong> Sử dụng mật khẩu giáo viên</p>
-          <p>📚 <strong>Học sinh:</strong> Sử dụng mật khẩu lớp học</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- TEACHER PAGE -->
-    <div id="teacherPage" class="page">
-      <div class="header">
-        <h2>🎓 Bảng Điều Khiển Giáo Viên</h2>
-        <button class="btn btn-secondary" id="logoutTeacher">Đăng xuất</button>
-      </div>
-      <div class="dashboard">
-        <div class="card">
-          <h3>📝 Upload Đề Thi</h3>
-          <form id="uploadForm">
-            <div class="form-group">
-              <label>Chọn file đề thi (Word)</label>
-              <input type="file" id="examFile" accept=".doc,.docx" required>
-              <small>Mỗi câu bắt đầu bằng "Câu X:", đáp án A. B. C. D.</small>
-            </div>
-            <div class="form-row">
-              <div class="form-group">
-                <label>Thời gian làm bài (phút)</label>
-                <input type="number" id="timeMinutes" min="1" max="180" value="45" required>
-              </div>
-              <div class="form-group">
-                <label>Mật khẩu đề (tùy chọn)</label>
-                <input type="text" id="examPassword" placeholder="Để trống nếu không cần">
-              </div>
-            </div>
-            <div class="form-group">
-              <label><input type="checkbox" id="shuffleQuestions" checked> Trộn câu hỏi (chỉ phần trắc nghiệm)</label>
-            </div>
-            <button type="submit" class="btn btn-primary" id="uploadBtn">📤 Upload Đề</button>
-          </form>
-          <div id="uploadMessage" class="message"></div>
-        </div>
-
-        <div class="card">
-          <h3>📚 Danh Sách Đề</h3>
-          <div id="examsList" class="exams-list">
-            <p class="empty-state">Đang tải...</p>
-          </div>
-        </div>
-
-        <div class="card">
-          <h3>📊 Bài Nộp Gần Đây</h3>
-          <div id="submissionsList" class="submissions-list">
-            <p class="empty-state">Đang tải...</p>
-          </div>
-        </div>
-    </div>
-      <!-- EXAM DETAIL MODAL - ĐÃ SỬA -->
-     <div id="examDetailModal" class="modal">
-       <div class="modal-content">
-         <h2>📋 Chi Tiết Đề Thi</h2>
-         <div id="examDetailContent"></div>
-         <div class="modal-actions">
-           <button class="btn btn-primary" id="saveAnswers">💾 Lưu Đáp Án</button>
-           <button class="btn btn-secondary" id="sendReport">📧 Gửi Báo Cáo</button>
-           <button class="btn btn-danger" id="deleteExam">🗑️ Xóa Đề</button>
-         </div>
-       </div>
-     </div>
-    </div>
-
-    <!-- STUDENT INFO PAGE -->
-    <div id="studentInfoPage" class="page">
-      <div class="header">
-        <h2>👨‍🎓 Thông Tin Học Sinh</h2>
-        <button class="btn btn-secondary" id="logoutStudent">Đăng xuất</button>
-      </div>
-      <div class="student-form-container">
-        <div class="card">
-          <h3>Nhập thông tin của bạn</h3>
-          <form id="studentInfoForm">
-            <div class="form-group">
-              <label>Họ và tên *</label>
-              <input type="text" id="studentName" placeholder="Nguyễn Văn A" required>
-            </div>
-            <div class="form-group">
-              <label>Ngày sinh *</label>
-              <input type="date" id="studentDOB" required>
-            </div>
-            <div class="form-group">
-              <label>Lớp</label>
-              <input type="text" id="studentClass" readonly>
-            </div>
-            <div class="form-group" id="examPasswordGroup" style="display:none;">
-              <label>Mật khẩu đề thi *</label>
-              <input type="password" id="studentExamPassword" placeholder="Nhập mật khẩu đề">
-            </div>
-            <button type="submit" class="btn btn-primary">▶️ Bắt Đầu Làm Bài</button>
-          </form>
-          <div id="studentInfoError" class="error-message"></div>
-        </div>
-      </div>
-    </div>
-
-    <!-- EXAM PAGE -->
-    <div id="examPage" class="page">
-      <div class="exam-header">
-        <div class="exam-info">
-          <h2>📝 Bài Kiểm Tra</h2>
-          <p id="studentInfo"></p>
-        </div>
-        <div class="timer-container">
-          <div class="timer" id="timer">--:--</div>
-          <div id="warningMessage" class="warning-message"></div>
-        </div>
-      </div>
-      <div class="exam-content">
-        <div id="questionsContainer" class="questions-container"></div>
-        <button class="btn btn-primary btn-submit" id="submitBtn">✅ Nộp Bài</button>
-      </div>
-    </div>
-
-    <!-- RESULT PAGE -->
-    <div id="resultPage" class="page">
-      <div class="result-container">
-        <div class="result-icon">✅</div>
-        <h2>Hoàn Thành!</h2>
-        <p id="resultMessage">Bài làm của bạn đã được nộp thành công.</p>
-        <div id="scoreDisplay" class="score-display"></div>
-        <button class="btn btn-primary" id="backToHome">Về Trang Chủ</button>
-      </div>
+    <h1>Hệ Thống Kiểm Tra</h1>
+    <label for="password">Nhập mật khẩu để tiếp tục</label>
+    <input type="password" id="password" placeholder="Mật khẩu giáo viên hoặc lớp học" />
+    <button onclick="login()">Đăng nhập</button>
+    <div class="note">
+      Giáo viên: Sử dụng mật khẩu giáo viên<br />
+      Học sinh: Sử dụng mã lớp học (VD: 12A1, 12A2)
     </div>
   </div>
 
-  <footer class="footer">
-    <p>© GV. Nguyễn Minh Thiện – Build with AI</p>
-  </footer>
-  <script src="main.js"></script>
+  <div id="main" class="container" style="display:none"></div>
+
+  <script>
+    async function login() {
+      const pw = document.getElementById('password').value.trim();
+      if (!pw) return alert('Vui lòng nhập mật khẩu');
+
+      try {
+        const res = await fetch('/login', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ password: pw })
+        });
+        const data = await res.json();
+        if (!res.ok) throw new Error(data?.error || 'Sai mật khẩu');
+
+        document.querySelector('.container').style.display = 'none';
+        const main = document.getElementById('main');
+        main.style.display = 'block';
+
+        if (data.role === 'teacher') {
+          main.innerHTML = await fetch('/admin/dashboard.html').then(r => r.text());
+        } else {
+          main.innerHTML = await fetch(`/exam/${data.classId}/start.html`).then(r => r.text());
+        }
+      } catch (err) {
+        alert(err.message);
+      }
+    }
+  </script>
 </body>
 </html>
