--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       </form>
       <div class="info-text">
         <p>Giáo viên: Sử dụng mật khẩu giáo viên</p>
-        <p>Học sinh: Sử dụng mã lớp học (VD: 12A1, 12A2)</p>
+        <p>Học sinh: Sử dụng mã lớp học</p>
       </div>
     </div>
   </div>
