--- a/public/index.html
+++ b/public/index.html
@@ -1,44 +1,165 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hệ Thống Kiểm Tra Trực Tuyến</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Trang đăng nhập -->
-  <div class="page active" id="loginPage">
-    <div class="login-box">
-      <div class="logo">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 11c0-1.1.9-2 2-2h6m-8 0H6m6 0v10m0-10V5" />
-        </svg>
-      </div>
-      <h1>Hệ Thống Kiểm Tra</h1>
-      <p class="subtitle">Nhập mật khẩu để tiếp tục</p>
-      <form id="loginForm">
-        <div class="input-group">
-          <input type="password" id="passwordInput" placeholder="Mật khẩu giáo viên hoặc lớp học" />
-          <button type="button" id="togglePassword" class="toggle-password">
-            <svg id="eyeIcon" viewBox="0 0 24 24" fill="none" stroke="currentColor"><circle cx="12" cy="12" r="3"/><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/></svg>
-          </button>
+  <div class="container">
+    <!-- LOGIN PAGE -->
+    <div id="loginPage" class="page active">
+      <div class="login-box">
+        <div class="logo">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"/>
+          </svg>
         </div>
-        <button id="loginBtn" class="btn btn-primary">Đăng nhập</button>
+        <h1>Hệ Thống Kiểm Tra</h1>
+        <p class="subtitle">Nhập mật khẩu để tiếp tục</p>
+        <form id="loginForm">
+          <div class="input-group">
+            <input type="password" id="passwordInput" placeholder="Mật khẩu" autocomplete="off" required>
+            <button type="button" class="toggle-password" id="togglePassword">
+              <svg id="eyeIcon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
+                <circle cx="12" cy="12" r="3"/>
+              </svg>
+            </button>
+          </div>
+          <button type="submit" class="btn btn-primary" id="loginBtn">Đăng nhập</button>
+        </form>
         <div id="loginError" class="error-message"></div>
-      </form>
-      <div class="info-text">
-        <p>Giáo viên: Sử dụng mật khẩu giáo viên</p>
-        <p>Học sinh: Sử dụng mã lớp học</p>
+        <div class="info-text">
+          <p>💡 <strong>Giáo viên:</strong> Sử dụng mật khẩu giáo viên</p>
+          <p>📚 <strong>Học sinh:</strong> Sử dụng mật khẩu lớp học</p>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Các phần còn lại sẽ được hiển thị sau khi đăng nhập -->
-  <div class="page" id="teacherPage" style="display:none"></div>
-  <div class="page" id="studentInfoPage" style="display:none"></div>
-  <div class="page" id="examPage" style="display:none"></div>
-  <div class="page" id="resultPage" style="display:none"></div>
+    <!-- TEACHER PAGE (Dashboard mới) -->
+    <div id="teacherPage" class="page">
+      <div class="header">
+        <h2>🎓 Bảng Điều Khiển Giáo Viên</h2>
+        <button class="btn btn-secondary" id="logoutTeacher">Đăng xuất</button>
+      </div>
+      <div class="dashboard">
+        <div class="card">
+          <h3>📝 Upload Đề Thi</h3>
+          <form id="uploadForm">
+            <div class="form-group">
+              <label>Chọn file đề thi (Word)</label>
+              <input type="file" id="examFile" accept=".doc,.docx" required>
+              <small>Mỗi câu bắt đầu bằng "Câu X:", đáp án A. B. C. D.</small>
+            </div>
+            <div class="form-row">
+              <div class="form-group">
+                <label>Thời gian làm bài (phút)</label>
+                <input type="number" id="timeMinutes" min="1" max="180" value="45" required>
+              </div>
+              <div class="form-group">
+                <label>Mật khẩu đề (tùy chọn)</label>
+                <input type="text" id="examPassword" placeholder="Để trống nếu không cần">
+              </div>
+            </div>
+            <div class="form-group">
+              <label><input type="checkbox" id="shuffleQuestions" checked> Trộn câu hỏi (chỉ phần trắc nghiệm)</label>
+            </div>
+            <button type="submit" class="btn btn-primary" id="uploadBtn">📤 Upload Đề</button>
+          </form>
+          <div id="uploadMessage" class="message"></div>
+        </div>
 
-  <script src="main.js"></script>
-</body>
-</html>
+        <div class="card">
+          <h3>📚 Danh Sách Đề</h3>
+          <div id="examsList" class="exams-list">
+            <p class="empty-state">Đang tải...</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <h3>📊 Bài Nộp Gần Đây</h3>
+          <div id="submissionsList" class="submissions-list">
+            <p class="empty-state">Đang tải...</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Modal chi tiết đề -->
+      <div id="examDetailModal" class="modal">
+        <div class="modal-content">
+          <button class="close" id="closeModal" title="Đóng" aria-label="Đóng"></button>
+          <h2>📋 Chi Tiết Đề Thi</h2>
+          <div id="examDetailContent"></div>
+          <div class="modal-actions">
+            <button class="btn btn-primary" id="saveAnswers">💾 Lưu Đáp Án</button>
+            <button class="btn btn-secondary" id="sendReport">📧 Gửi Báo Cáo</button>
+            <button class="btn btn-danger" id="deleteExam">🗑️ Xóa Đề</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- STUDENT INFO PAGE -->
+    <div id="studentInfoPage" class="page">
+      <div class="header">
+        <h2>👨‍🎓 Thông Tin Học Sinh</h2>
+        <button class="btn btn-secondary" id="logoutStudent">Đăng xuất</button>
+      </div>
+      <div class="student-form-container">
+        <div class="card">
+          <h3>Nhập thông tin của bạn</h3>
+          <form id="studentInfoForm">
+            <div class="form-group">
+              <label>Họ và tên *</label>
+              <input type="text" id="studentName" placeholder="Nguyễn Văn A" required>
+            </div>
+            <div class="form-group">
+              <label>Ngày sinh *</label>
+              <input type="date" id="studentDOB" required>
+            </div>
+            <div class="form-group">
+              <label>Lớp</label>
+              <input type="text" id="studentClass" readonly>
+            </div>
+            <div class="form-group" id="examPasswordGroup" style="display:none;">
+              <label>Mật khẩu đề thi *</label>
+              <input type="password" id="studentExamPassword" placeholder="Nhập mật khẩu đề">
+            </div>
+            <button type="submit" class="btn btn-primary">▶️ Bắt Đầu Làm Bài</button>
+          </form>
+          <div id="studentInfoError" class="error-message"></div>
+        </div>
+      </div>
+    </div>
+
+    <!-- EXAM PAGE -->
+    <div id="examPage" class="page">
+      <div class="exam-header">
+        <div class="exam-info">
+          <h2>📝 Bài Kiểm Tra</h2>
+          <p id="studentInfo"></p>
+        </div>
+        <div class="timer-container">
+          <div class="timer" id="timer">--:--</div>
+          <div id="warningMessage" class="warning-message"></div>
+        </div>
+      </div>
+      <div class="exam-content">
+        <div id="questionsContainer" class="questions-container"></div>
+        <button class="btn btn-primary btn-submit" id="submitBtn">✅ Nộp Bài</button>
+      </div>
+    </div>
+
+    <!-- RESULT PAGE -->
+    <div id="resultPage" class="page">
+      <div class="result-container">
+        <div class="result-icon">✅</div>
+        <h2>Hoàn Thành!</h2>
+        <p id="resultMessage">Bài làm của bạn đã được nộp thành công.</p>
+        <div id="scoreDisplay" class="score-display"></div>
+        <button class="btn btn-primary" id="backToHome">Về Trang Chủ</button>
+      </div>
+    </div>
+  </
