--- a/public/index.html
+++ b/public/index.html
@@ -163,3 +163,12 @@
       </div>
     </div>
   </
+  </div> <!-- đóng div.container -->
+
+  <footer class="footer">
+    <p>© GV. Nguyễn Minh Thiện – Build with AI</p>
+  </footer>
+
+  <script src="main.js"></script>
+</body>
+</html>
