--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="style.css">
   <!-- MathJax để hiển thị công thức LaTeX -->
   <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" defer></script>
+  <script>
+  window.MathJax = {
+    loader: { load: ['input/mml', 'output/chtml'] }
+  };
+</script>
+<script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js" defer></script>
 </head>
 <body>
   <div class="container">
