--- a/public/index.html
+++ b/public/index.html
@@ -19,17 +19,17 @@
     
    <!-- LOGIN PAGE -->
 <div id="loginPage" class="page active">
-  <div class="login-container">
-    <h2>🔑 Đăng Nhập Hệ Thống</h2>
+  <div class="login-box">
+    <h2>🔑 Đăng Nhập</h2>
     <form id="loginForm">
-      <label for="password">Nhập mật khẩu:</label>
-      <input type="password" id="password" name="password" required />
-      <button type="submit" class="btn btn-primary">Đăng nhập</button>
+      <input type="password" id="password" placeholder="Nhập mật khẩu..." required />
+      <button type="submit" class="btn btn-primary">Vào hệ thống</button>
     </form>
-    <p class="hint">👉 Giáo viên và học sinh dùng mật khẩu khác nhau.</p>
-    <div id="loginError" class="error" aria-live="polite"></div>
+    <p class="hint">👉 Dùng mật khẩu đã được cung cấp.</p>
+    <div id="loginError" class="error"></div>
   </div>
 </div>
+
 
     <!-- TEACHER PAGE -->
 <div id="teacherPage" class="page">
