--- a/public/index.html
+++ b/public/index.html
@@ -17,19 +17,35 @@
 <body>
   <div class="container">
     
-   <!-- LOGIN PAGE -->
+ <!-- LOGIN PAGE -->
 <div id="loginPage" class="page active">
   <div class="login-box">
-    <h2>🔑 Đăng Nhập</h2>
+    <div class="logo">
+      <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+        <path d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"/>
+      </svg>
+    </div>
+    <h1>Hệ Thống Kiểm Tra</h1>
+    <p class="subtitle">Nhập mật khẩu để tiếp tục</p>
     <form id="loginForm">
-      <input type="password" id="password" placeholder="Nhập mật khẩu..." required />
-      <button type="submit" class="btn btn-primary">Vào hệ thống</button>
+      <div class="input-group">
+        <input type="password" id="passwordInput" placeholder="Mật khẩu" autocomplete="off" required>
+        <button type="button" class="toggle-password" id="togglePassword">
+          <svg id="eyeIcon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
+            <circle cx="12" cy="12" r="3"/>
+          </svg>
+        </button>
+      </div>
+      <button type="submit" class="btn btn-primary" id="loginBtn">Đăng nhập</button>
     </form>
-    <p class="hint">👉 Dùng mật khẩu đã được cung cấp.</p>
-    <div id="loginError" class="error"></div>
+    <div id="loginError" class="error-message"></div>
+    <div class="info-text">
+      <p>💡 <strong>Giáo viên:</strong> Sử dụng mật khẩu giáo viên</p>
+      <p>📚 <strong>Học sinh:</strong> Sử dụng mật khẩu lớp học</p>
+    </div>
   </div>
 </div>
-
 
     <!-- TEACHER PAGE -->
 <div id="teacherPage" class="page">
